Class matching fails after moving an element from a quirks-mode document to a standards-mode document. https://bugs.webkit.org/show_bug.cgi?id=173528 rdar://98786212

Reviewed by Ryosuke Niwa.

Imports a fix from Chromium to make a unique copy of element data when moving elements between quirks and standards mode documents.
Chromium revision: https://chromium.googlesource.com/chromium/src.git/+/3d8dd287aeb97d6dbb658da989ac4a4c95853dc7

* LayoutTests/imported/w3c/web-platform-tests/quirks/classname-query-after-sibling-adoption-expected.txt:
* Source/WebCore/dom/Element.cpp:
(WebCore::Element::didMoveToNewDocument):

Canonical link: https://commits.webkit.org/253975@main